# classyc-dev

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  create_symlink.cmake
assets/: test.clc
dependencies/my-iostreams/: BufferStreams.hpp  CFile.hpp  ConsoleStreams.hpp  FileStreams.hpp  FileViewStreams.hpp  IOStreams.hpp  Logging.hpp  TextIO.hpp
dependencies/my-patterns/: Patterns.hpp
include/: Preprocessor.hpp  SourceLocation.hpp  lua_bytecode.h  lua_fs.h  lua_utility.h
include/Preprocessor/: Macro.hpp  MacroDefinitions.hpp
include/bytecode/: Preprocessor.h  log.h  main.h  oop.h
include/bytecode/Preprocessor/: IMacro.h  MacroBuiltin.h  MacroDefined.h
lua/: FileInfo.lua  Preprocessor.lua  log.lua  main.lua  oop.lua
lua/Preprocessor/: IMacro.lua  MacroBuiltin.lua  MacroDefined.lua  MacroExpansion.lua
lua/meta/: BuildInfo.lua  ConsoleArgs.lua  FilesystemAPI.lua  Utility.lua
source/: Preprocessor.cpp  main.cpp
src/: lua_fs.c  lua_utility.c  main.c
src/lua/: CommonPatterns.lua  FileInfo.lua  Preprocessor.lua  log.lua  main.lua  oop.lua
src/lua/Preprocessor/: IMacro.lua  MacroBuiltin.lua  MacroDefined.lua  MacroExpansion.lua
src/lua/meta/: BuildInfo.lua  FilesystemAPI.lua
tests/: ProtoPreproc.cpp  TestPatterns.cpp  TestTextIO.cpp  tests.cpp
tests/assets/: input.txt  preprocessor abstract grammar.txt  shunting-yard.md
tests/include/: ProtoPreprocessor.hpp  TestPatterns.hpp  TestTextIO.hpp
